# xadmin3

./: AGENTS.md  README.md  main.py  pyproject.toml
demo_app/: db.sqlite3  manage.py
demo_app/app/: adminx.py  models.py
demo_app/app/migrations/: 0001_initial.py  0002_alter_host_administrator.py
demo_app/demo_app/: asgi.py  settings.py  urls.py  wsgi.py
xadmin/: __init__.py  adminx.py  apps.py  filters.py  forms.py  layout.py  models.py  sites.py  util.py  widgets.py
xadmin/migrations/: 0004_alter_bookmark_id_alter_log_id_alter_usersettings_id_and_more.py
xadmin/plugins/: actions.py  aggregation.py  ajax.py  auth.py  batch.py  bookmark.py  chart.py  comments.py  editable.py  excel.py  export.py  filters.py  importexport.py  inline.py  multiselect.py  quickfilter.py  quickform.py  relate.py  relfield.py  sitemenu.py  sortablelist.py  themes.py  utils.py  wizard.py  xversion.py
xadmin/templates/xadmin/blocks/: model_list.top_toolbar.importexport.export.html
xadmin/templates/xadmin/excel/: model_list.top_toolbar.import.html
xadmin/templates/xadmin/includes/: sitemenu_accordion.html  sitemenu_default.html
xadmin/templatetags/: xadmin_tags.py
xadmin/views/: __init__.py  base.py  dashboard.py  delete.py  detail.py  edit.py  form.py  list.py  website.py
