[project]
name = "xadmin"
version = "0.6.1"
description = "Drop-in replacement of Django admin comes with lots of goodies, fully extensible with plugin support, pretty UI based on Twitter Bootstrap."
readme = "README.rst"
requires-python = ">=3.12"
license = { text = "BSD" }
dependencies = [
    "django==4.2",
    "django-crispy-forms>=2.5",
    "crispy-bootstrap3>=2024.1",
    "django-reversion>=6.1.0",
    "django-formtools>=2.5.1",
    "django-import-export>=0.5.1",
    "httplib2>=0.31.2",
    "future",
    "six",
]

[project.optional-dependencies]
excel = ["xlwt", "xlsxwriter"]

[tool.uv]
dev-dependencies = []
